# email-assistant

./: .gitignore  README.md  app.py  batch_ai_decisions.json  batch_process_mails.json  human_preferences.json  pyproject.toml
logic/: a_pull_email_data.py  b_ai_read_emails.py  c_apply_ai_decisions.py  d_manage_decisions.py
tools/: io.py  load_env.py  threaded_pool.py
