[tool.poetry]
name = "email-assistent"
version = "0.1.0"
description = ""
authors = ["ghhwer"]
readme = "README.md"
packages = [{include = "email_assistent"}]

[tool.poetry.dependencies]
python = "^3.11"
google-auth = "google-auth-oauthlib"
openai = "^0.27.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
