[tool.poetry]
name = "email-assistent"
version = "0.1.0"
description = ""
authors = ["ghhwer"]
readme = "README.md"
packages = [{include = "email_assistent"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.8"
google-auth-oauthlib = "^1.0.0"
google-api-python-client = "^2.91.0"
beautifulsoup4 = "^4.12.2"
unidecode = "^1.3.7"
ipykernel = "^6.29.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
